--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: test-terraform-versions // collect-results
         id: collect-results
-        run: echo version=$(terraform version --json | jq -r .terraform_version) >> $GITHUB_OUTPUT
+        run: echo version="$(terraform version --json | jq -r .terraform_version)" >> $GITHUB_OUTPUT
 
       - name: test-terraform-versions // verify-version
         if: ${{ matrix.version != 'latest' }}
