--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -46,9 +46,11 @@ jobs:
         with:
           version: ${{ matrix.version }}
 
+      - run: terraform version --json | jq -r .terraform_version
+
       - name: test-terraform-versions // collect-results
         id: collect-results
-        run: echo version="$(terraform version --json | jq -r .terraform_version)" >> $GITHUB_OUTPUT
+        run: echo "version=$(terraform version --json | jq -r .terraform_version)" >> $GITHUB_OUTPUT
 
       - name: test-terraform-versions // verify-version
         if: ${{ matrix.version != 'latest' }}
