--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -48,9 +48,11 @@ jobs:
 
       - run: terraform version --json 
 
+      - run: jq --version
+
       - name: test-terraform-versions // collect-results
         id: collect-results
-        run: echo "version=$(terraform version --json | jq -r .terraform_version)" >> $GITHUB_OUTPUT
+        run: echo "version=$(terraform version --json | jq -r '.terraform_version')" >> $GITHUB_OUTPUT
 
       - name: test-terraform-versions // verify-version
         if: ${{ matrix.version != 'latest' }}
