more debugging - wtf is this pipe thing about

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -46,6 +46,8 @@ jobs:
         with:
           version: ${{ matrix.version }}
 
+      - run: terraform version | head -n1
+
       - name: test-terraform-versions // collect-results
         id: collect-results
         run: echo "version=$(terraform version | head -n1 | cut -d' ' -f2 | cut -dv -f2)" >> $GITHUB_OUTPUT
