seeing if the wrapper is causing the strangeness

--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,7 @@ runs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: ${{ inputs.version }}
+        terraform_wrapper: false
 
     - name: techjavelin/iac-action-terraform-validate // terraform-init
       id: init
