--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
         version: ['1.3.2', 'latest']
 
     runs-on: ${{ matrix.os }}
