--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,13 @@ inputs:
     description: "Specific version of terraform to use"
     required: false
     default: 'latest'
+  backend_cloud_credential_hostname:
+    description: "The hostname of the cloud backend provider"
+    required: false
+    default: "app.terraform.io"
+  backend_cloud_credential_token:
+    description: "If you're using terraform cloud as a backend, provide your credential here"
+    required: false
 
 outputs:
   init:
@@ -41,6 +48,12 @@ runs:
       with:
         terraform_version: ${{ inputs.version }}
         terraform_wrapper: false
+
+    - name: techjavelin/iac-action-terraform-validate // credential
+      if: ${{ inputs.terraform_cloud_credential.token != null }}
+      run: |
+        echo -e "credentials = \"${{ inputs.backend_cloud_credential_hostname }}\" {\n\ttoken = \"${{ inputs.backend_cloud_credential_token }}\"\n}" >> $HOME/.terraformrc
+      shell: bash
 
     - name: techjavelin/iac-action-terraform-validate // terraform-init
       id: init
